Version 1.1.0
- ADD: Width marker for log messages. (Stefan)
- ADD: Log message templates. (Stefan)
- ADD: Possibility to delete mutliple selected files at
       once in the repository browser. (Stefan)
- ADD: new keywords $WCDATE$ and $WCMODS? for the
       SubWCRev-tool. (Simon Large)
- CHG: Better colorization in the blame viewer. (Simon Large)
- BUG: Some dialogs in the repobrowser had the accelerator
       ampersand char in their title. (Stefan)

Version 1.1.0 RC2
- ADD: "dry-run" option for the merge command. This solves
       issue 92. (Stefan)
- ADD: TortoiseBlame for viewing blames. Issue 95. (Stefan)
- ADD: Integration with bug/issuetrackers. (Stefan)
- ADD: The commit dialog got a log history combobox. (Stefan)
- ADD: Finish message when ignoring files. (Stefan)
- CHG: TortoiseMerge doesn't complain anymore when doing diffs
       of files which have/have not the keywords expanded. (Stefan)
- CHG: The repository browser closes the connection after each
       ls command to prevent too many svnserve processes on
       the server hanging around. (Stefan)
- BUG: TortoiseMerge showed bad view titles in merge view. (Stefan)
- BUG: TortoiseMerge parsed diff files which had binary files
       mentioned in it poorly and could crash. (Stefan)
- BUG: the patched apr-iconv couldn't find our so files. (Stefan)
- BUG: Diffing files without a file extension but with the
       path/URL having a dot in it could lead to a crash. (Stefan)
- BUG: The language packs weren't used, even if checked in
       the settings dialog. (Stefan)
- BUG: On NT4, the auth data wasn't saved correctly. (Stefan)

Version 1.1.0 RC1
- ADD: New button in the commit dialog which will 
       fill the log message box with the status
       and filename of all selected files. (Stefan)
- ADD: Option to exclude/include specific paths from showing
       icon overlays. (Stefan)
- ADD: On Win2k and later, the authentication data is now