@@ -1,3 +1,6 @@
+- ADD: The path to client certificates and the client
+       certificate password can now be saved. (Stefan)
+
 Version 1.1.0
 - ADD: Width marker for log messages. (Stefan)
 - ADD: Log message templates. (Stefan)
